# chess-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
include/: config.hpp
src/: main.cpp
